SPY: fix spacing on hero mobile

--- a/app/(site)/component/hero/hero.scss
+++ b/app/(site)/component/hero/hero.scss
@@ -10,7 +10,7 @@
   background: url('/images/hero-rotation.gif') no-repeat center;
   background-size: 650px;
   padding: 0 utils.bu(3);
-  background-position-y: 50%;
+  background-position-y: 288px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -20,6 +20,7 @@
     flex-direction: row;
     padding: 0 utils.bu(7.5);
     background-size: contain;
+    background-position-y: 50%;
   }
 
   > span {
@@ -37,7 +38,7 @@
     }
 
     &:first-of-type {
-      margin-top: utils.bu(20);
+      margin-top: utils.bu(26);
 
       @include mixins.breakpoint(lg) {
         margin: 0;
